Updated old links

--- a/index.html
+++ b/index.html
@@ -1,192 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head>
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type" />
-  <title>Modern GPU</title>
-  <link href="mgpu.css" rel="stylesheet" type="text/css" />
-  <script src="syntaxhighlighter_3.0.83/scripts/shCore.js" type="text/javascript"></script>
-  <script src="syntaxhighlighter_3.0.83/scripts/shBrushCpp.js" type="text/javascript"></script>
-  <link href="syntaxhighlighter_3.0.83/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
-  <link href="syntaxhighlighter_3.0.83/styles/shCore.css" rel="stylesheet" type="text/css" />
-  <script type="text/javascript"> SyntaxHighlighter.all() </script>
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-25772750-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-</head><body class="tutorial">
-
-<a href="https://github.com/NVlabs/moderngpu"><img style="position: absolute; top: 0; right: 0; border: 0;" width="149" height="149" src="forkme_right_green_007200.png" alt="Fork me on GitHub" /></a>
-
-<h1>Modern GPU 2.0 now available</h1>
-<h3><a href="https://github.com/NVlabs/moderngpu">Code and docs on github</a></h3>
-<br/>
-<div class="copyright">
-<p><strong>&copy; 2013, NVIDIA CORPORATION. All rights reserved.</strong></p>
-<p>Code and text by <a href="https://twitter.com/moderngpu">Sean Baxter</a>, NVIDIA Research.</p>
-<p>(Click <a href="faq.html#license">here</a> for license. Click <a href="faq.html#contact">here</a> for contact information.)</p>
-</div><br />
-<h2>Modern GPU 1.0</h2>
-<p><em><strong>Modern GPU is code and commentary intended to promote new and productive ways
-of thinking about GPU computing.</strong></em></p>
-<p>This project is a<strong> library</strong>, an <strong>algorithms book</strong>, a <strong>tutorial</strong>, and a <strong>best-practices guide</strong>. If you are new to CUDA, start <a href="faq.html#gettingstarted">here</a>. If you're already familiar with CUDA, are ready for a challenge, and want to learn design patterns for parallel programming, enjoy this series.</p>
-<p><a href="http://www.github.com/seanbaxter/gtc_2014">GTC 2014 slides and companion source code</a>.</p>
-<p><a href="cascon.pptx">Turning the Crank on Streaming Algorithms</a> presentation for <a href="https://www-927.ibm.com/ibm/cas/cascon/">IBM CASCON 2013</a>.</p>
-<p><a href="breaking.html">Notes on breaking changes</a>.</p>
-<br />
-<ol class="contents" start='0'>
-  <li><h3><a href="faq.html">FAQ</a></h3></li>
-
-<li><h3><a href="intro.html">Introduction</a></h3><ul>
-	<li><a href="intro.html#libraries">Libraries</a></li>
-    <li><a href="intro.html#goals">Goals</a></li>
-    <li><a href="intro.html#twophase">Two-phase decomposition</a></li>
-    <li><a href="intro.html#loadbalancing">From scan to load-balancing search</a></li>
-    <li><a href="intro.html#expand">Expand</a></li>
-    <li><a href="intro.html#expandloadbalance">Expand with load-balancing search</a></li>
-    <li><a href="intro.html#algorithms">Algorithms</a></li>
-</ul>
-</li>
-
-
-<li><h3><a href="performance.html">Performance</a></h3><ul>
-    <li><a href="performance.html#occupancy">Occupancy and latency</a></li>
-    <li><a href="performance.html#launchbounds">Launch bounds</a></li>
-    <li><a href="performance.html#performance">Getting more performance out of MGPU</a></li>
-    <li><a href="performance.html#launchbox">LaunchBox</a></li>
-</ul>
-</li>
-
-
-<li>
-  <h3><a href="library.html">The Library</a></h3><ul>
-    <li><a href="library.html#framework">Framework</a></li>
-    <li><a href="library.html#loadstore">Load/store functions</a></li>
-</ul>
-</li>
-
-
-<li>
-  <h3><a href="scan.html">Reduce and Scan</a></h3><ul>
-	<li><a href="scan.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="scan.html#host">Host functions</a></li>    
-    <li><a href="scan.html#algorithm">Algorithm</a></li>
-    <li><a href="scan.html#ctareduce">CTAReduce</a></li>
-    <li><a href="scan.html#reducekernel">Reduce kernel</a></li>
-    <li><a href="scan.html#ctascan">CTAScan</a></li>
-    <li><a href="scan.html#scankernel">Scan kernel</a></li>    
-</ul></li>
-
-<li>
-  <h3><a href="bulkinsert.html">Bulk Remove and Bulk Insert</a></h3><ul>
-	<li><a href="bulkinsert.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="bulkinsert.html#host">Host functions</a></li>
-    <li><a href="bulkinsert.html#bulkremove">Bulk remove algorithm</a></li>
-    <li><a href="bulkinsert.html#binarysearch">BinarySearchPartitions</a></li>
-    <li><a href="bulkinsert.html#kernelbulkremove">KernelBulkRemove</a></li>
-    <li><a href="bulkinsert.html#bulkinsertpartitioning">Bulk insert partitioning</a></li>
-    <li><a href="bulkinsert.html#mergepath">Merge Path</a></li>
-	<li><a href="bulkinsert.html#bulkinsert">Bulk insert algorithm</a></li>
-    <li><a href="bulkinsert.html#kernelbulkinsert">Bulk insert host function and kernel</a></li>
-</ul></li>
-
-<li><h3><a href="merge.html">Merge</a></h3><ul>
-	<li><a href="merge.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="merge.html#host">Host functions</a></li>
-    <li><a href="merge.html#algorithm">Algorithm</a></li>
-</ul></li>
-
-<li><h3><a href="mergesort.html">Mergesort</a></h3><ul>
-	<li><a href="mergesort.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="mergesort.html#host">Host functions</a></li>
-	<li><a href="mergesort.html#algorithm">Algorithm</a></li>
-    <li><a href="mergesort.html#sortnetworks">Sorting networks</a></li>
-    <li><a href="mergesort.html#blocksort">Blocksort</a></li>
-    <li><a href="mergesort.html#mergepartitioning">Flexible merge partitioning</a></li>    
-    <li><a href="mergesort.html#mergepathpartitions">MergePathPartitions</a></li>
-    <li><a href="mergesort.html#launch">Launching from the host</a></li>
-</ul></li>
-
-<li>
-  <h3><a href="segsort.html">Segmented Sort and Locality Sort</a></h3><ul>
-	<li><a href="segsort.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="segsort.html#host">Host functions</a></li>
-	<li><a href="segsort.html#algorithm">Algorithm</a></li>
-	<li><a href="segsort.html#blocksort">Segmented blocksort</a></li>
-	<li></li>
-    <li><a href="segsort.html#earlyexit">Early-exit</a></li>
-	<li><a href="segsort.html#filling">Filling the work queue</a></li>
-	<li><a href="segsort.html#servicing">Servicing the work queue</a></li>
-</ul></li>
-
-<li>
-  <h3><a href="sortedsearch.html">Vectorized Sorted Search</a></h3><ul>
-	<li><a href="sortedsearch.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="sortedsearch.html#host">Host functions</a></li>
-	<li><a href="sortedsearch.html#algorithm">Algorithm</a></li>
-	<li><a href="sortedsearch.html#parallel">Parallel sorted search</a></li>
-	<li><a href="sortedsearch.html#ctasortedsearch">CTASortedSearch</a></li>
-	<li><a href="sortedsearch.html#equalitycount">SortedEqualityCount</a></li>
-</ul></li>
-<li>
-  <h3><a href="loadbalance.html">Load-Balancing Search</a></h3><ul>
-	<li><a href="loadbalance.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="loadbalance.html#host">Host function</a></li>
-    <li><a href="loadbalance.html#algorithm">Algorithm</a></li>
-    <li><a href="loadbalance.html#ctaloadbalance">CTALoadBalance</a></li>
-</ul></li>
-
-<li>
-  <h3><a href="intervalmove.html">IntervalExpand and IntervalMove</a></h3><ul>
-	<li><a href="intervalmove.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="intervalmove.html#host">Host functions</a></li>
-    <li><a href="intervalmove.html#intervalexpand">IntervalExpand</a></li>
-    <li><a href="intervalmove.html#intervalmove">IntervalMove</a></li>
-  </ul>
-</li>
-
-<li>
-  <h3><a href="join.html">Relational Joins</a></h3><ul>
-	<li><a href="join.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="join.html#host">Host functions</a></li>
-    <li><a href="join.html#algorithm">Algorithm</a></li>
-</ul></li>
-
-<li><h3><a href="sets.html">Multisets</a></h3><ul>
-	<li><a href="sets.html#benchmark">Benchmark and usage</a></li>
-	<li><a href="sets.html#host">Host functions</a></li>
-	<li><a href="sets.html#operations">The four multiset operations</a></li>
-    <li><a href="sets.html#balancedpath">Balanced Path</a></li>
-    <li><a href="sets.html#serialops">Serial multiset operations</a></li>
-    <li><a href="sets.html#kernel">Multisets kernel</a></li>
-</ul></li>
-
-
-	<li>
-	  <h3><a href="segreduce.html">Segmented Reduction</a></h3><ul>
-    	<li><a href="segreduce.html#segreducecsr">Benchmarks and usage: Segmented reduction (CSR)</a></li>
-        <li><a href="segreduce.html#reducebykey">Benchmarks and usage: Reduce-by-key</a></li>
-        <li><a href="segreduce.html#spmv">Benchmarks and usage: Sparse matrix * vector (CSR)</a></li>
-        <li><a href="segreduce.html#usernotes">User notes</a></li>
-        <li><a href="segreduce.html#algorithm">Intra-tile algorithm</a></li>
-        <li><a href="segreduce.html#carryout">Carry-out and carry-in</a></li>
-        <li><a href="segreduce.html#ctasegreduce">CTASegReduce</a></li>
-        <li><a href="segreduce.html#reducebykeyfrontend">Reduce-by-key front-end</a></li>
-        <li><a href="segreduce.html#preprocessapply">Preprocessed segmented reduction - Apply</a></li>
-        <li><a href="segreduce.html#csrtocoo">CSR to COO</a></li>
-        <li><a href="segreduce.html#preprocessconstruct">Preprocessed segmented reduction - Construct</a></li>
-        <li><a href="segreduce.html#segreducecsrfrontend">Segmented reduction (CSR) front-end</a></li>
-      </ul>
-  </li>
-
-</ol>
-<br />
-</body>
-</html>
+<meta http-equiv="refresh" content="0; url=https://www.github.com/seanbaxter/moderngpu"> 
